code, kbd elements no longer overlap

--- a/static/css/ejacobg.css
+++ b/static/css/ejacobg.css
@@ -9,7 +9,7 @@
 body {
     font-family: sans-serif;
     font-size: 16px;
-    line-height: 1.2;
+    line-height: 1.6;
     margin: 0 auto;
     max-width: 800px;
     padding: 2rem;
